# FitNessy

./: .gitignore  README.md  calc_distance.py  main.py  main_fastapi.py  pyproject.toml  temp_heels2buttocksdetector.py
fitness/: __init__.py  app.py  bhujangasandetector.py  cobradetector.py  constants.py  detector.py  given_tools.py  heels2buttocksdetector.py  kneeraisedetector.py  meditationposedetector.py  movedetector.py  plankdetector.py  posedetector.py  pushupdetector.py  rectangle.py  squatdetector.py  tools.py  treeposedetector.py
fitness/img_exo/: Tree Pose.avif
model/: creat_training_dataset.py  knn_pompe_model.pkl  model_pompe_knn.py
